--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^15.1.6",
-    "@angular/cli": "~15.1.6",
+    "@angular/cli": "^16.2.9",
     "@angular/compiler-cli": "^15.1.0",
     "fs-extra": "^11.1.0",
     "typescript": "~4.9.4"
